# tsumugi

./: .rustfmt.toml  Cargo.toml  README.md  mise.toml
.github/workflows/: ci.yml
crates/tsumugi/: Cargo.toml
crates/tsumugi-core/: Cargo.toml
crates/tsumugi-core/src/: context.rs  error.rs  lib.rs  step.rs  traits.rs
crates/tsumugi/examples/: data_validation_pipeline.rs  etl_api_to_csv.rs  file_processing_pipeline.rs  health_check_monitor.rs  notification_dispatch.rs  order_workflow.rs  simple_workflow.rs  user_scoring_workflow.rs
crates/tsumugi/src/: lib.rs  workflow.rs
crates/tsumugi/tests/: integration_test.rs
examples/: order_workflow.rs  simple_workflow.rs  user_scoring_workflow.rs
src/: context.rs  error.rs  lib.rs  prelude.rs  step.rs  workflow.rs
tests/: integration_test.rs
