[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/kiwamizamurai/tsumugi"

[workspace.dependencies]
tsumugi-core = { path = "crates/tsumugi-core" }
tsumugi = { path = "crates/tsumugi" }
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
thiserror = "1.0"
tracing = "0.1"

[workspace.lints.rust]
unsafe_code = "forbid"
unused_must_use = "deny"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
