[package]
name = "tsumugi-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Core traits and types for tsumugi workflow engine"

[dependencies]
async-trait = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
